[package]
name = "hc-runner"
version = "0.4.0"
edition = "2021"
description = "Command runner for healthchecks.io"
license = "MIT"

[dependencies]
clap = { version = "4", features = ["derive"] }
config = { version = "0.14", default-features = false, features = ["toml"] }
directories = "5"
reqwest = "0.11"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "1"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
httpmock = "0.7"
