[package]
name = "hc-runner"
version = "0.4.4"
edition = "2021"
description = "Command runner for healthchecks.io"
license = "MIT"
repository = "https://github.com/n8henrie/hc-runner"

[dependencies]
clap = { version = "4", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
directories = "6"
reqwest = "0.12"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
url = { version = "2", features = ["serde"] }

[dev-dependencies]
httpmock = "0.7"

[target.aarch64-unknown-linux-gnu.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[lints.clippy]
pedantic = "warn"
